# dzy3

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-artifact-matrix.yml  cmake-multi-platform.yml  cmake-test-matrix.yml
include/: Course.h  Database.h  Department.h  Graduate_Student.h  Project.h  Score.h  Student.h
scripts/: setup_packages.ps1  setup_packages.sh
source/: main.cpp
tests/: CMakeLists.txt  test_course.cpp  test_score.cpp  test_student.cpp
