function(add_gtest name src)
  	add_executable(${name} ${src})
	if (OS_NAME STREQUAL "Windows")
		target_link_libraries(${name} GTest::gtest GTest::gtest_main)
	else()
		target_link_libraries(${name} GTest::GTest GTest::Main)
	endif()
	target_include_directories(${name} PRIVATE ${PROJECT_SOURCE_DIR}/include)
  	add_test(NAME ${name} COMMAND ${name})
endfunction()

add_gtest(test_course test_course.cpp)
